--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "jquery": "^3.3.1",
     "morgan": "~1.9.0",
     "ms": "^2.1.1",
+    "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "setprototypeof": "^1.1.1",
-    "statuses": "^1.5.0"
+    "statuses": "^1.5.0",
+    "token": "^0.1.0"
   },
   "devDependencies": {
     "gulp": "^4.0.0"
